[gd_scene load_steps=5 format=3 uid="uid://cnhl0jjfuvhlw"]

[ext_resource type="Script" path="res://coral/coral.gd" id="1_to2df"]
[ext_resource type="Texture2D" uid="uid://1ylpv5grdwxf" path="res://coral/coral_dead.png" id="1_xmolb"]
[ext_resource type="Texture2D" uid="uid://bvmxlipwd2v2x" path="res://coral/Graphics/Bubble_Coral_Yellow.png" id="2_6mhgg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vdhng"]
size = Vector2(348, 184)

[node name="Coral" type="StaticBody2D"]
script = ExtResource("1_to2df")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-13, 10)
shape = SubResource("RectangleShape2D_vdhng")

[node name="SpriteAlive" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_6mhgg")

[node name="SpriteDead" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
texture = ExtResource("1_xmolb")

[node name="BubbleSpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0

[connection signal="timeout" from="BubbleSpawnTimer" to="." method="_on_timer_timeout"]
